[tool.poetry]
name = "fastapi_polls"
version = "0.1.0"
description = ""
authors = ["erbniasz"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
flake8 = "^4.0.1"
SQLAlchemy = "^1.4.35"
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
